  as well by modifying either the start values and constraints accordingly (e.g., constrain all
  slopes to be equal to 1/1.702 and not freely estimated for the classical Rasch model, or all equal 
  but estimated for the 1PL model)

* number confmirt.model() options decreased due to the new way to specify item types, startvalues, prior
  parameter distributions, and constraints


----------------------------------------------------------------
mirt 0.2.6-1
---------------------------------------------------------------

* dropped the ball and had lots of bug fixes this round. Future
  commits will avoid this problem by utilizing the testthat package
  to test code extensively before release

* internal change in confmirt function to move MHRM engine outside the 
  function for better maintenance

* theta_angle added to mirt and polymirt plots for changing the viewing angle 
  w.r..t theta_1 

* null model no longer calculated when missing data present

* fixed item slope models estimated in mirt() with associated standard errors

----------------------------------------------------------------
mirt 0.2.6
---------------------------------------------------------------

* null model computed, allowing for model statistics such as TLI

* documentation changes

* many back end technical details about estimation moved to technical lists

* support for all GPArotation methods and options, including Target rotations

* polymirt() uses confmirt() estimation engine

* 4PL support for mirt() and bfactor(), treating the upper bound as fixed

* coef() now has a rotate option for returning rotated IRT parameters

----------------------------------------------------------------
mirt 0.2.5
---------------------------------------------------------------

* Fixed translation bug in the C++ code from bfactor() causing illegal 
  vector length throw

* Fixed fscores() bug when using polychotomous items for mirt() and 
  bfactor()
