@@ -336,19 +336,7 @@ mirt <- function(data, nfact, itemtype = NULL, guess = 0, upper = 1, SE = FALSE,
 	tabdata <- cbind(tabdata,r) 
 	tabdata2 <- cbind(tabdata2,r) 
 	colnames(tabdata) <- c(Names, 'Freq')
-	colnames(tabdata2) <- c(itemnames, 'Freq')	
-	if(is.logical(par.prior)) 
-	    if(par.prior) suppressAutoPrior <- FALSE  
-	        temp <- matrix(c(1,0,0),ncol = 3, nrow=J, byrow=TRUE)
-	if(!is.logical(par.prior)){
-		if(!is.null(par.prior$slope.items))
-			for(i in 1:length(par.prior$slope.items))
-				temp[par.prior$slope.items[i],1] <- par.prior$slope		
-		if(!is.null(par.prior$int.items))
-			for(i in 1:length(par.prior$int.items))
-				temp[par.prior$int.items[i],2:3] <- par.prior$int		 
-	}  
-	par.prior <- temp 
+	colnames(tabdata2) <- c(itemnames, 'Freq')		
 	Rpoly <- cormod(na.omit(data),K,guess)
 	if(!is.null(prev.cor)){
 		if (ncol(prev.cor) == nrow(prev.cor)) Rpoly <- prev.cor
