@@ -5,9 +5,18 @@ Multidimentional item response theory in R.
 ##Description
 
 Analysis of dichotomous and polychotomous response data using
-latent trait models under the Item Response Theory paradigm. Includes the
-multivariate two- and three-parameter logistic models, confirmatory
-bifactor analysis, polytomous exploratory and confirmatory item response
-models which may include polynomial or product constructed factors,
-and partially-compensatory item response modeling in conjunction
-with other IRT models.
+latent trait models under the Item Response Theory paradigm. Includes
+univariate and multivariate (MV) one-, two-, three-, and four-parameter
+logistic models, graded response models, generalized partial credit models,
+nominal models, and multivariate partially-compensatory models. These can
+be used in an exploratory or confirmatory manner with optional user defined linear
+constraints. Exploratory models can be estimated via quadrature or
+stochastic methods, a generalized confirmatory bifactor analysis is
+included, and confirmatory IRT models can be fit stochastically with an MH-RM algorithm 
+and can include polynomial or product constructed latent traits.
+
+#Extra
+
+Bug reports are always welcome and the prefered way to address these bugs is through
+the github 'issues'. Feel free to submit issues or feature requests on the site, and I'll 
+address them ASAP. Cheers!
